Integra API para delete y update Tasks

--- a/Habitask/src/app/pages/home/home.component.html
+++ b/Habitask/src/app/pages/home/home.component.html
@@ -34,7 +34,7 @@
               <span>{{task.title}}</span>
             </div>
             
-            <button (click)="deleteTask(i)" 
+            <button (mousedown)="deleteTask(i)" 
             class="ml-4 text-brown-500 hover:text-red-600 ">
               <!-- Icono de eliminar o puedes reemplazarlo con una imagen o svg -->
               <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
