Configuracion de Auth Amplify-Angular

--- a/Habitask/src/app/app.component.html
+++ b/Habitask/src/app/app.component.html
@@ -1,2 +1,11 @@
-<router-outlet></router-outlet> 
-
+<amplify-authenticator variation="modal">
+    <ng-template
+      amplifySlot="authenticated"
+      let-user="user"
+      let-signOut="signOut"
+    >
+      <h2>Welcome, {{ user.username }}!</h2>
+      <button (click)="signOut()">Sign Out</button>
+      <router-outlet></router-outlet> 
+    </ng-template>
+  </amplify-authenticator>
