--- a/Habitask/src/app/app.component.html
+++ b/Habitask/src/app/app.component.html
@@ -1,11 +1,39 @@
-<amplify-authenticator variation="modal">
+<amplify-authenticator [signUpAttributes]= "['name','email']" >
+    <ng-template amplifySlot="header">
+        <div style="padding: var(--amplify-space-large); text-align: center">
+          <img
+            class="amplify-image"
+            alt="Amplify logo"
+            src="https://docs.amplify.aws/assets/logo-dark.svg"
+          />
+        </div>
+    </ng-template>
+    <ng-template amplifySlot="sign-in-header">
+        <h3
+          class="amplify-heading"
+          style="padding: var(--amplify-space-xl) 0 0 var(--amplify-space-xl)"
+        >
+          Sign in to your account
+        </h3>
+    </ng-template>
+    <ng-template amplifySlot="sign-up-header">
+        <h3
+          class="amplify-heading"
+          style="padding: var(--amplify-space-xl) 0 0 var(--amplify-space-xl)"
+        >
+          Create a new account
+        </h3>
+      </ng-template>
     <ng-template
       amplifySlot="authenticated"
       let-user="user"
       let-signOut="signOut"
     >
+   
+
       <h2>Welcome, {{ user.username }}!</h2>
       <button (click)="signOut()">Sign Out</button>
       <router-outlet></router-outlet> 
     </ng-template>
   </amplify-authenticator>
+
