--- a/Habitask/src/app/pages/home/home.component.html
+++ b/Habitask/src/app/pages/home/home.component.html
@@ -47,7 +47,7 @@
         
             <div class="flex items-center">
               <div class="text-gray-500 text-xs">
-                {{ task.assigned?.name }}
+                {{ task.created?.name }}
               </div>
               <button (mousedown)="deleteTask(i)" class="ml-4 text-brown-500 hover:text-red-600">
                 <!-- Icono de eliminar o puedes reemplazarlo con una imagen o svg -->
